--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,7 @@ one: {}
 #
 #two: {}
 # column: value
+david_hasselhoff:
+  email: david@hasselhoff.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, "12345678") %>
+  confirmed_at: <%= Time.now %>
